# framework-codegen

./: README.md  codegen_version  createBinaryComponent  createOctaveComponent  createPackage  createPackageDependency  moveComponentNamespace  redhawk-codegen  redhawk-codegen.spec  setup.py  update_project
redhawk/codegen/: libraries.py  settings.py  utils.py  versions.py
redhawk/codegen/jinja/: __init__.py  environment.py  filters.py  generator.py  loader.py  mapping.py  ports.py  template.py  testparser.py  tests.py
redhawk/codegen/jinja/common/: __init__.py  template.py
redhawk/codegen/jinja/common/templates/: reconf
redhawk/codegen/jinja/cpp/: __init__.py  generator.py  template.py
redhawk/codegen/jinja/cpp/component/: octave.py
redhawk/codegen/jinja/cpp/component/base/: __init__.py  generator.py  mapping.py
redhawk/codegen/jinja/cpp/component/base/templates/: Makefile.am  Makefile.am.ide  build.sh  configure.ac  main.cpp
redhawk/codegen/jinja/cpp/component/frontend/: generator.py  mapping.py
redhawk/codegen/jinja/cpp/component/frontend/templates/: frontend_properties.cpp  resource.cpp  resource.h  resource_base.cpp  resource_base.h  struct_props.h
redhawk/codegen/jinja/cpp/component/mFunction/: generator.py  mapping.py
redhawk/codegen/jinja/cpp/component/mFunction/templates/: gpl.cpp  octaveEmbedding.cpp  octaveResource.cpp  octaveResource.h  octaveResource_base.cpp  octaveResource_base.h
redhawk/codegen/jinja/cpp/component/persona/: generator.py  mapping.py
redhawk/codegen/jinja/cpp/component/persona/templates/: Makefile.am  configure.ac  entry_point.h  main.cpp  persona_base.cpp  persona_base.h  resource.cpp  resource.h
redhawk/codegen/jinja/cpp/component/programmable/: mapping.py
redhawk/codegen/jinja/cpp/component/programmable/templates/: entry_point.h  programmable_base.h  resource.cpp  resource.h
redhawk/codegen/jinja/cpp/component/pull/: generator.py  mapping.py
redhawk/codegen/jinja/cpp/component/pull/templates/: port_impl.h  resource.cpp  resource.h  resource_base.cpp  resource_base.h  struct_props.h
redhawk/codegen/jinja/cpp/ports/: __init__.py  bulkio.py  burstio.py  event.py  frontend.py  generator.py  generic.py  mapping.py  message.py  portfactory.py
redhawk/codegen/jinja/cpp/ports/templates/: generic.provides.cpp  generic.provides.h  generic.uses.cpp  generic.uses.h  message.h
redhawk/codegen/jinja/cpp/properties/: __init__.py  mapping.py
redhawk/codegen/jinja/cpp/properties/templates/: properties.cpp
redhawk/codegen/jinja/cpp/service/: __init__.py  generator.py  mapping.py
redhawk/codegen/jinja/cpp/service/templates/: Makefile.am  build.sh  configure.ac  main.cpp  port_impl.cpp  port_impl.h  service.cpp  service.h  service_base.cpp  service_base.h  struct_props.h
redhawk/codegen/jinja/java/: __init__.py  generator.py  properties.py  template.py
redhawk/codegen/jinja/java/component/base/templates/: Makefile.am  configure.ac  properties.java  startJava.sh
redhawk/codegen/jinja/java/component/frontend/: mapping.py
redhawk/codegen/jinja/java/component/frontend/templates/: resource.java  resource_base.java
redhawk/codegen/jinja/java/component/jmerge/: __init__.py  generator.py  mapping.py  portfactory.py
redhawk/codegen/jinja/java/component/pull/: generator.py  mapping.py
redhawk/codegen/jinja/java/ports/: __init__.py  bulkio.py  burstio.py  event.py  generator.py  generic.py  mapping.py  message.py  portfactory.py
redhawk/codegen/jinja/java/ports/templates/: generic.provides.java  generic.uses.java  message.java
redhawk/codegen/jinja/java/service/: __init__.py  generator.py  mapping.py
redhawk/codegen/jinja/java/service/templates/: service.java
redhawk/codegen/jinja/project/component/: __init__.py  generator.py  mapping.py
redhawk/codegen/jinja/project/component/templates/: build.sh  component.spec
redhawk/codegen/jinja/project/octaveComponent/templates/: component.spec
redhawk/codegen/jinja/project/softPackageDependency/: generator.py  mapping.py
redhawk/codegen/jinja/project/softPackageDependency/cpp/: __init__.py  generator.py  mapping.py
redhawk/codegen/jinja/project/softPackageDependency/cpp/templates/: Makefile.am  configure.ac  package.pc  pkgconfig.pc
redhawk/codegen/jinja/project/softPackageDependency/directory/: generator.py
redhawk/codegen/jinja/project/softPackageDependency/existing/: __init__.py  generator.py  mapping.py
redhawk/codegen/jinja/project/softPackageDependency/templates/: build.sh  dependency.spec
redhawk/codegen/jinja/python/: __init__.py  filters.py  generator.py  properties.py  template.py
redhawk/codegen/jinja/python/component/binary/: mapping.py
redhawk/codegen/jinja/python/component/frontend/: mapping.py
redhawk/codegen/jinja/python/component/programmable/: mapping.py
redhawk/codegen/jinja/python/component/pull/: generator.py  mapping.py
redhawk/codegen/jinja/python/component/pull/templates/: configure.ac  resource.py  resource_base.py
redhawk/codegen/jinja/python/ports/: __init__.py  bulkio.py  burstio.py  event.py  generator.py  generic.py  mapping.py  message.py  portfactory.py
redhawk/codegen/jinja/python/ports/templates/: bulkio.provides.py  bulkio.uses.py  generic.provides.py  generic.uses.py
redhawk/codegen/jinja/python/service/: generator.py  mapping.py
redhawk/codegen/jinja/python/service/templates/: service.py
redhawk/codegen/jinja/unitTests/resource/sca/: generator.py  mapping.py
redhawk/codegen/lang/: automake.py  cpp.py  idl.py  java.py  python.py
redhawk/codegen/model/: properties.py  softpkg.py  softwarecomponent.py
redhawk/packagegen/: autoCreateOctaveComponent.py  binaryPackage.py  cppPackageDependency.py  createPackage.py  createPackageDependency.py  directoryPackageDependency.py  exampleConfigFile.cfg  existingPackageDependency.py  octavePackage.py  packageDependencyTemplates.py  packageTemplates.py  resourcePackage.py  runCodgen.sh  softPackage.py
redhawk/packagegen/templates/: packageDependencyTemplates.py  resourceTemplate.scd.xml  resourceTemplate.spd.xml
(+12 files in other folders)
